--- a/debug.html
+++ b/debug.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
 
-    <link rel="stylesheet" type="text/css" href="http://riges.swecosundsvall.se/ext-4.2.1/resources/css/ext-all-neptune.css">
+    <link rel="stylesheet" type="text/css" href="/ext-4.2.1/resources/css/ext-all-neptune.css">
     <link rel="steylsheet" type="text/css" href="oeadmin.css" />
     <script type="text/javascript" src="/ext-4.2.1/ext-debug.js"></script>
     <script type="text/javascript" src="/ext-4.2.1/ext-theme-neptune.js"></script>
     <script type="text/javascript" src="/ext-4.2.1/locale/ext-lang-sv_SE.js"></script>
     <script type="text/javascript" src="/OpenLayers-2.13.1/OpenLayers.js"></script>
-    <script type="text/javascript" src="/geoext2-all.js"></script>
+    <script type="text/javascript" src="geoext2.js"></script>
     
     <script type="text/javascript">
         var appPath = '/openemapadmin'; 
@@ -22,7 +22,8 @@
             disableCaching: false,
             paths: {
                 AdmClient: 'src/main/javascript',
-                OpenEMap: '../map-client/src/main/javascript'
+                OpenEMap: '../OpenEMap-WebUserInterface/src/main/javascript',
+                GeoExt: '../geoext2-2.0.0/src/GeoExt/'
             }
           });
           
