--- a/debug.html
+++ b/debug.html
@@ -15,9 +15,9 @@
     
     <script type="text/javascript">
         var appPath = '/openemapadmin'; 
-        //var defaultWMSServer = 'http://www.corsproxy.com/extmaptest.sundsvall.se/geoserver/wms?request=GetCapabilities&version=1.1.0';
-        //var defaultWMSServer = 'http://www.corsproxy.com/nomad.swecosundsvall.se/geoserver/wms?request=GetCapabilities&version=1.1.0';
-        var defaultWMSServer = 'gwc.xml'; 
+        var defaultWMSServer = 'http://www.corsproxy.com/extmaptest.sundsvall.se/geoserver/wms?request=GetCapabilities&version=1.1.0';
+        var defaultWMSServer = 'http://www.corsproxy.com/nomad.swecosundsvall.se/geoserver/wms?request=GetCapabilities&version=1.1.0';
+        //var defaultWMSServer = 'gwc.xml'; 
         Ext.Loader.setConfig({
             disableCaching: false,
             paths: {
