--- a/debug.html
+++ b/debug.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=9">
 
     <link rel="stylesheet" type="text/css" href="/ext-4.2.1/resources/css/ext-all-neptune.css">
-    <link rel="steylsheet" type="text/css" href="oeadmin.css" />
+    <link rel="stylesheet" type="text/css" href="oeadmin.css" />
+    <link rel="stylesheet" type="text/css" href="resources/images/icons/css/font-awesome.css">
     <script type="text/javascript" src="/ext-4.2.1/ext-debug.js"></script>
     <script type="text/javascript" src="/ext-4.2.1/ext-theme-neptune.js"></script>
     <script type="text/javascript" src="/ext-4.2.1/locale/ext-lang-sv_SE.js"></script>
@@ -14,7 +15,7 @@
     <script type="text/javascript" src="geoext2.js"></script>
     
     <script type="text/javascript">
-        var appPath = '/openemapadmin'; 
+        var appPath = '/openemap-admin'; 
         var defaultWMSServer = 'http://www.corsproxy.com/extmaptest.sundsvall.se/geoserver/wms?request=GetCapabilities&version=1.1.0';
         var defaultWMSServer = 'http://www.corsproxy.com/nomad.swecosundsvall.se/geoserver/wms?request=GetCapabilities&version=1.1.0';
         //var defaultWMSServer = 'gwc.xml'; 
@@ -31,5 +32,6 @@
     <script type="text/javascript" src="src/main/javascript/App.js"></script>
 </head>
 <body>
+    <div id="contentitem" style="width: 100%; height: 100%;"></div>
 </body>
 </html>
