--- a/UI/debug.html
+++ b/UI/debug.html
@@ -5,17 +5,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
 
-    <link rel="stylesheet" type="text/css" href="/libs/ext-4.2.1/resources/css/ext-all-neptune.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/ext-4.2.1/resources/ext-theme-neptune/ext-theme-neptune-all.css">
     <link rel="stylesheet" type="text/css" href="oeadmin.css" />
-    <link rel="stylesheet" type="text/css" href="resources/images/icons/css/font-awesome.css">
-    <script type="text/javascript" src="/libs/ext-4.2.1/ext-debug.js"></script>
-    <script type="text/javascript" src="/libs/ext-4.2.1/ext-theme-neptune.js"></script>
-    <script type="text/javascript" src="/libs/ext-4.2.1/locale/ext-lang-sv_SE.js"></script>
-    <script type="text/javascript" src="/libs/OpenLayers-2.13.1/OpenLayers.js"></script>
-    <!--  <script type="text/javascript" src="/libs/geoext2.js"></script>-->
+<!--    <link rel="stylesheet" type="text/css" href="resources/images/icons/css/font-awesome.css">-->
+    <script type="text/javascript" src="bower_components/ext-4.2.1/ext-debug.js"></script>
+    <script type="text/javascript" src="bower_components/ext-4.2.1/ext-theme-neptune.js"></script>
+    <script type="text/javascript" src="bower_components/ext-4.2.1/locale/ext-lang-sv_SE.js"></script>
+    <script type="text/javascript" src="bower_components/OpenLayers-2.13.1/OpenLayers.js"></script>
+    <!--  <script type="text/javascript" src="bower_components/geoext2/release/geoext-all.js"></script>-->
     
     <script type="text/javascript">
-        var appPath = '/openemap-admin'; 
+        var appPath = '/openemapadmin'; 
         var defaultWMSServer = 'https://extmaptest.sundsvall.se/geoserver/wms?request=GetCapabilities&version=1.1.0';
         var wfsServer = 'https://extmaptest.sundsvall.se/geoserver/wfs';
         //var defaultWMSServer = 'http://www.corsproxy.com/nomad.swecosundsvall.se/geoserver/wms?request=GetCapabilities&version=1.1.0';
@@ -24,8 +24,8 @@
             disableCaching: false,
             paths: {
                 AdmClient: 'src/main/javascript',
-                OpenEMap: '/OpenEMap-WebUserInterface/src/main/javascript',
-                GeoExt: '/libs/geoext-2.0.1/src/GeoExt/'
+//                OpenEMap: '../../OpenEMap-WebUserInterface/src/main/javascript',
+                GeoExt: 'bower_components/geoext2/src/GeoExt/'
             }
           });
           
