--- a/UI/debug_factory.html
+++ b/UI/debug_factory.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=9">
 
     <script type="text/javascript" src="OpenEMapAdmin.js"></script>
+    <script>
+    	initOpenEMapAdmin();
+    </script>
 </head>
 <body>
     <div id="contentitem" style="width: 100%; height: 100%;"></div>
