--- a/UI/debug_factory.html
+++ b/UI/debug_factory.html
@@ -5,9 +5,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
 
-    <script type="text/javascript" src="OpenEMapAdmin.js"></script>
     <script>
-    	initOpenEMapAdmin();
+        var appPath = '/openemapadmin'; 
+        var defaultWMSServer = 'https://extmaptest.sundsvall.se/geoserver/wms?request=GetCapabilities&version=1.1.0';
+        var wfsServer = 'https://extmaptest.sundsvall.se/geoserver/wfs';
+/*		var configOpenEMapAdminApp = {
+            disableCaching: false,
+            paths: {
+                AdmClient: 'src/main/javascript',
+                OpenEMap: 'bower_components/OpenEMap/src/main/javascript',
+                GeoExt: 'bower_components/geoext2/src/GeoExt/'
+            }
+    	};
+*/
+    </script>
+    <script type="text/javascript" src="OpenEMapAdmin.js"></script>
     </script>
 </head>
 <body>
