--- a/UI/debug.html
+++ b/UI/debug.html
@@ -23,14 +23,15 @@
         var wfsServer = 'https://extmaptest.sundsvall.se/geoserver/wfs';
         var wmsServer = 'https://extmaptest.sundsvall.se/geoserver/wms';
 		var proxyUrl = '/cgi-bin/proxy.py?url=';
-		var configOpenEMapAdminApp = {
+        Ext.Loader.setConfig({
             disableCaching: false,
+		    appFolder: 'src/main/javascript/',
             paths: {
                 AdmClient: 'src/main/javascript',
                 OpenEMap: 'bower_components/OpenEMap/src/main/javascript',
                 GeoExt: 'bower_components/geoext2/src/GeoExt/'
             }
-       };
+        });
          
     </script> 
     <script type="text/javascript" src="src/main/javascript/App.js"></script>
