--- a/UI/debug_factory.html
+++ b/UI/debug_factory.html
@@ -6,18 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=9">
 
     <script>
-        var appPath = '/openemapadmin'; 
+    	// context path to OpenEMap-Admin-Services 
+    	var appPath = '/openemapadmin';
+    	// Settings for servers 
         var defaultWMSServer = 'https://extmaptest.sundsvall.se/geoserver/wms?request=GetCapabilities&version=1.1.0';
         var wfsServer = 'https://extmaptest.sundsvall.se/geoserver/wfs';
-/*		var configOpenEMapAdminApp = {
-            disableCaching: false,
-            paths: {
-                AdmClient: 'src/main/javascript',
-                OpenEMap: 'bower_components/OpenEMap/src/main/javascript',
-                GeoExt: 'bower_components/geoext2/src/GeoExt/'
-            }
-    	};
-*/
+        var wmsServer = 'https://extmaptest.sundsvall.se/geoserver/wms';
+		var proxyUrl = '/cgi-bin/proxy.py?url=';
+		var wmsGetCapabilities = proxyUrl + defaultWMSServer; 
     </script>
     <script type="text/javascript" src="OpenEMapAdmin.js"></script>
     </script>
