--- a/debug.html
+++ b/debug.html
@@ -24,6 +24,7 @@
         var wmsServer = 'https://extmaptest.sundsvall.se/geoserver/wms';
 		var proxyUrl = '/cgi-bin/proxy.py?url=';
 		var wmsGetCapabilities = proxyUrl + defaultWMSServer; 
+		var imageBasePath = imageBasePath || '';
 		
         Ext.Loader.setConfig({
             disableCaching: false,
