Fixed #56 proxy settings removed from text field. It is always included if it is set in the global variable proxyUrl.

--- a/debug.html
+++ b/debug.html
@@ -23,7 +23,7 @@
         var wfsServer = 'http://localhost:8000/geoserver/wfs';
         var wmsServer = 'http://localhost:8000/geoserver/wms';
 		var proxyUrl = 'http://localhost:8000/openemapadmin/adminproxy?url=';
-		var wmsGetCapabilities = proxyUrl + defaultWMSServer; 
+		var wmsGetCapabilities = defaultWMSServer; 
 		var imageBasePath = imageBasePath || '';
 		
         Ext.Loader.setConfig({
